# FreqDict2

./: .clang-format  CMakeLists.txt  README.md
freq/: freq.cpp  freq.hpp  main.cpp
freq_gcc/: Makefile  main.c
